<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SUTDRoomSearch</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Search</string>
    <string name="level_2">L2</string>
    <string name="level_3">L3</string>
    <string name="level_4">L4</string>
    <string name="clear">Clear</string>

</resources>
