<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/map_activity"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<!-- Map -->
	<com.example.sutdroomsearch.TouchImageView
		android:id="@+id/map"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#FFFFFF"
		android:onClick="selectRoom" />

	<!-- Container for search bar and level selector -->
	<LinearLayout
		android:layout_gravity="top"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<!-- Search Bar -->
		<LinearLayout
			android:id="@+id/search_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			
			<!-- Search Box: Enter search query -->
			<EditText
				android:id="@+id/search_box"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:hint="@string/search_hint"
				android:textSize="18sp"
				android:focusable="false"
				android:onClick="switchToSearch" />

			<!-- Clear Button: Clear current search -->
			<ImageButton
				android:id="@+id/search_clear"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:src="@drawable/clear"
				android:contentDescription="@string/clear"
				android:onClick="clearSearch" />

		</LinearLayout>

		<!-- Level Selector -->
		<LinearLayout
			android:id="@+id/level_selector"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			
			<!-- Level 2 Button: show level 2 map -->
			<Button
				android:id="@+id/l2_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/level_2"
				android:onClick="showL2Map" />

			<!-- Level 3 Button: show level 3 map -->
			<Button
				android:id="@+id/l3_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/level_3"
				android:onClick="showL3Map" />
			
			<!-- Level 4 Button: show level 4 map -->
			<Button
				android:id="@+id/l4_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/level_4"
				android:onClick="showL4Map" />

		</LinearLayout>

		<TextView
	        android:id="@+id/level_title"
	        android:layout_gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Level 2"
	        android:textAlignment="2"
	        android:textColor="#000000"
	        android:textSize="20sp" />

	</LinearLayout>

	<!-- Info Pane -->
	<LinearLayout
		android:id="@+id/info_pane"
		android:layout_gravity="bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="#DD000000">
		
		<!-- Name of person -->
		<TextView
			android:id="@+id/info_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="24sp"
			android:textStyle="bold"
			android:textColor="#EEEEEE"
			android:textIsSelectable="true" />

		<!-- Room location -->
		<TextView
			android:id="@+id/info_position"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="#EEEEEE"
			android:textIsSelectable="true" />

		<!-- Phone number -->
		<TextView
			android:id="@+id/info_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="#EEEEEE"
			android:textIsSelectable="true"
			android:clickable="true"
			android:onClick="callPerson" />

		<!-- E-mail address -->
		<TextView
			android:id="@+id/info_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="#EEEEEE"
			android:textIsSelectable="true"
			android:clickable="true"
			android:onClick="emailPerson" />

	</LinearLayout>

</FrameLayout>
